- Testing movie controller
Movie controller minitest

--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -13,3 +13,10 @@ two:
   movie_length: MyString
   director: MyString
   rating: MyString
+
+three:
+  title: MyString
+  description: MyText
+  movie_length: MyString
+  director: MyString
+  rating: MyString
