--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,15 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one:
+  email: "one_email@me.com"
+  encrypted_password: 'password'
+  id: 1
+
+
+two:
+  email: "two_email@me.com"
+  encrypted_password: 'password'
+  id: 2
 # column: value
 #
-two: {}
-# column: value
